[package]
name = "maestro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.11"

anyhow = "1.0.58"
clap = { version = "4.1.7", features = ["derive", "color", "suggestions", "env", "unicode"] }

k8s-openapi = { version = "0.21", features = ["v1_26"] }
kube = { version = "0.90.0", default-features = false, features = ["runtime", "derive", "client", "rustls-tls"] }

tokio = { version = "1", default-features=false, features = ["macros"] }

futures = "0.3.26"
async-stream = "0.3.4"

