[package]
name = "maestro"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
env_logger = "0.11"

anyhow = "1.0.58"
clap = { version = "4.1.7", features = ["derive", "color", "suggestions", "env", "unicode"] }

k8s-openapi = { version = "0.21", features = ["v1_26"] }
kube = { version = "0.90.0", default-features = false, features = ["runtime", "derive", "client", "rustls-tls"] }

tokio = { version = "1", default-features=false, features = ["macros"] }

futures = "0.3.26"
async-stream = "0.3.4"
lazy_static = "1.4.0"
serde = { version = "1.0.198", features = ["serde_derive", "derive"] }

[dev-dependencies]
tokio = { version = "1", default-features=false, features = ["macros", "rt"] }
serde_yml = "0.0.4"
env_logger = "0.11"